--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,11 @@
 
     <Button
         android:id="@+id/enable_button"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="126dp"
+        android:layout_height="47dp"
         android:layout_marginTop="1dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginRight="9dp"
         android:layout_marginBottom="12dp"
         android:text="@string/enable_button"
         app:layout_constraintBottom_toTopOf="@+id/wifi_status_text_view"
@@ -22,16 +22,31 @@
 
     <Button
         android:id="@+id/discover_button"
-        android:layout_width="154dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="95dp"
-        android:layout_marginRight="95dp"
-        android:layout_marginBottom="79dp"
+        android:layout_width="140dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="2dp"
         android:text="@string/discover_button"
+        app:layout_constraintBottom_toBottomOf="@+id/reset_button"
+        app:layout_constraintEnd_toStartOf="@+id/reset_button"
+        app:layout_constraintStart_toEndOf="@+id/enable_button"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/reset_button"
+        android:layout_width="98dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginBottom="76dp"
+        android:text="@string/reset_button"
         app:layout_constraintBottom_toTopOf="@+id/peer_list_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/enable_button"
+        app:layout_constraintStart_toEndOf="@+id/discover_button"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
@@ -46,7 +61,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/discover_button" />
+        app:layout_constraintTop_toBottomOf="@+id/reset_button" />
 
     <TextView
         android:id="@+id/wifi_status_text_view"
